--- a/WEB/src/html/mover_robot.html
+++ b/WEB/src/html/mover_robot.html
@@ -3,8 +3,8 @@
 <head>
   <title>My first web page for ROS!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <script src="/home/codo/node_modules/roslib/build/roslib.min.js"></script>
-  <script src="main.js"></script>
+  <script src="../js/roslib.min.js"></script>
+  <script src="../js/mover_robot.js"></script>
 </head>
 
 <body class="d-flex flex-column h-100">
