--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="opciones">
-            <a href="">INICIAR SESIÓN</a>
+            <a href="mover/mover_robot.html">INICIAR SESIÓN</a>
             <a href="html/cesta.html">CESTA (0)</a>
             <button id="installButton" style="display: none;">Instalar aplicación</button>
         </div>
