COMIT MUY NORMAL
EL COMIT MÁS NORMAL QUE VERÁS

--- a/WEB/src/mover/mover_robot.html
+++ b/WEB/src/mover/mover_robot.html
@@ -40,11 +40,20 @@
                             <h2 class="text-center" id="title">Main content</h2>
                             <button class="mt-2 btn btn-primary" id="btn_move">Mover</button>
                             <button class="mt-2 btn btn-primary" id="btn_forward">Adelante</button>
-                            <button class="mt-2 btn btn-primary" id="btn_backward">Atrás</button>
+                            <button class="mt-2 btn btn-primary" id="btn_backward">Atras</button>
                             <button class="mt-2 btn btn-primary" id="btn_right">Derecha</button>
                             <button class="mt-2 btn btn-primary" id="btn_left">Izquierda</button>
                             <button class="mt-2 btn btn-primary" id="btn_stop">Parar</button>
 
+                            <button class="mt-2 btn btn-primary" id="btn_publish_initial_pose">Establecer Posicion Inicial</button>
+                            <br><br> <!-- Separación visual -->
+                            <label for="input_x">X:</label>
+                            <input type="number" id="input_x" name="input_x" value="0">
+                            <label for="input_y">Y:</label>
+                            <input type="number" id="input_y" name="input_y" value="0">
+                            <label for="input_z">Z:</label>
+                            <input type="number" id="input_z" name="input_z" value="0">
+                            <button class="mt-2 btn btn-primary" id="btn_navigate_to_pose">Ir a Posicion</button>
                         </div>
                     </div>
                 </div>
